--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@layer base {
+  body {
+    @apply font-primary bg-primary text-white leading-loose;
   }
-}
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}
+  .h1 {
+    @apply text-[40px] lg:text-[60px] leading-[1.1] font-semibold;
+  }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+  .h2 {
+    @apply text-[36px] lg:text-[40px] leading-[1.1] font-semibold;
+  }
+
+  .h3 {
+    @apply text-[20px] lg:text-[24px] leading-[1.1] font-semibold;
+  }
+
+  .text-outline {
+    -webkit-text-stroke: 1px #ffffff;
+  }
+
+  .text-outline-hover {
+    -webkit-text-stroke: 1px #00ff99;
   }
 }
